# skypro_lesson_13_1

./: .coverage  .gitignore  config.py  pyproject.toml
skypro_lesson_13_1/: abc_product.py  category.py  generate_products.py  iter_category.py  lawn_grass.py  mixin_log.py  my_exception.py  order.py  order_abc.py  product.py  smartphone.py
tests/: class_test.py  conftest.py  test_category.py  test_generate_products.py  test_iter_category.py  test_lawn_grass.py  test_order.py  test_product.py  test_smartphone.py
